# scikit_build_core_minimal_shared_library_example

./: CMakeLists.txt  pyproject.toml
.github/workflows/: build_wheels.yml
scikit_build_core_minimal_shared_library_example/: __init__.py  library.c
tests/: test_library_function.py
