[project]
name = "scikit_build_core_minimal_shared_library_example"
version = "0.1.0"
requires-python = ">=3.10"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.cibuildwheel]
build = "cp310-*"
build-verbosity = "3"
test-requires = ["pytest==7.2.1"]
test-command = "pytest {package}/tests"
